photos added to cms

--- a/app/views/casein/layouts/_tab_navigation.html.erb
+++ b/app/views/casein/layouts/_tab_navigation.html.erb
@@ -1,5 +1,6 @@
 <!-- NOTE: the casein:scaffold generator automatically appends new controllers to this file. The SCAFFOLD_INSERT line must NOT be removed -->
 <!-- SCAFFOLD_INSERT -->
+<li id="tab-photos"><%= link_to "Photos", casein_photos_path %></li>
 <li id="tab-tourdates"><%= link_to "Tourdates", casein_tourdates_path %></li>
 <li id="tab-songs"><%= link_to "Songs", casein_songs_path %></li>
 <li id="tab-releases"><%= link_to "Releases", casein_releases_path %></li>
